chore(pagination): fix icon color on dark mode

--- a/packages/themes/src/morpheme/_pagination.dark.scss
+++ b/packages/themes/src/morpheme/_pagination.dark.scss
@@ -29,6 +29,10 @@
       }
     }
 
+    .v-icon {
+      color: currentColor;
+    }
+
     // variants
     &--text-rounded,
     &--text {
